// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary renders with 0 expenses 1`] = `
<div
  className="expense-summary"
>
  Viewing 
  0 expenses 
   totalling 
  $0.00
</div>
`;

exports[`ExpenseSummary renders with 1 expense 1`] = `
<div
  className="expense-summary"
>
  Viewing 
  1 expense 
   totalling 
  $0.10
</div>
`;

exports[`ExpenseSummary renders with 3 expenses 1`] = `
<div
  className="expense-summary"
>
  Viewing 
  3 expenses 
   totalling 
  $0.60
</div>
`;
